updated home link

--- a/apidocs.html
+++ b/apidocs.html
@@ -43,7 +43,7 @@
 	</head>
 	<body>
 		<div class="col-sm-3">
-            <a href="https://sherrybath12.github.io/portfolio/">
+            <a href="https://sherrybath12.github.io/Hello-World/">
                 <img src="assets/home.jpg" class="img-responsive" width="50" height="50" alt="home"/>
             </a>
     </div>
