--- a/tech.html
+++ b/tech.html
@@ -4,7 +4,7 @@
 <head> 
     <title>PDF in HTML</title> 
 </head> 
-<body> 
+<body style="background-color:rgb(212, 202, 182);">
     <div class="col-sm-3">
             <a href="https://sherrybath12.github.io/Hello-World/">
                 <img src="assets/home.jpg" class="img-responsive" width="50" height="50" alt="home"/>
@@ -14,33 +14,48 @@
         <table>
             <tr>
                 <td>
-        <h1 style="color: brown">Technical Writing Samples</h1> 
-        <h3 style="color: blue">Orders Implementation Guide</h3> 
+        <h1 style="color: brown" align="center">Technical Writing Samples</h1>
+    </br>
+        <h3 style="color: brown">Orders Implementation Guide</h3> 
         <h4> This is a sample of a User Implementation guide (made at McKesson)</h4>
         <div id="scroll-wrapper">
         <iframe src=  "https://sherrybath12.github.io/Hello-World/samples/Technical Implementation Guide.pdf" 
                 width="1000"
                 height="1000"> 
-        </iframe> 
+        </iframe>
+    </br>
+</br>
+</br>
+</br>
+</br>
+</br>
         </div>
     </td>
     </tr>
     <tr>
         <td>
-            <h3 style="color: blue">JMeter API Testing Developer Guide</h3> 
+            <h3 style="color: brown">JMeter API Testing Developer Guide</h3> 
             <h4> This is a sample of JMeter API Testing Developer Guide (made at CHC)</h4>
             <div id="scroll-wrapper">
             <iframe src=  "https://sherrybath12.github.io/Hello-World/samples/JMeter.pdf" 
                     width="1000"
                     height="1000"> 
-            </iframe> 
+            </iframe>
+        </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
         </div>
         </td>
     </tr>
 </tr>
+</br>
+</br>
 <tr>
     <td>
-        <h3 style="color: blue">HTML to Figma</h3> 
+        <h3 style="color: brown">HTML to Figma</h3> 
         <h4> This is a one pager on how to clone a website template into Figma</h4>
         <div id="scroll-wrapper">
         <iframe src=  "https://sherrybath12.github.io/Hello-World/assets/figma.jpg" 
