added sample writing pieces

--- a/apidocs.html
+++ b/apidocs.html
@@ -1,104 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html> 
 	<head>
-		<script
-			src="https://code.jquery.com/jquery-3.3.1.js"
-			integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-			crossorigin="anonymous"
-		></script>
-		<script>
-			$(function () {
-				$("#header").load("header.html");
-			});
-		</script>
-		<!--Title-->
-		<title>Portfolio</title>
-		<!--Favicon-->
-		<link rel="shortcut icon" type="image/png" href="assets/portfolio.jpg" />
-		<!--Encoding-->
-		<meta charset="UTF-8" />
-		<!--Metatext-->
-		<meta name="Portfolio" />
-		<!--SEO Keywords-->
-		<meta
-			name="keywords"
-			content="portfolio, technical-writing, documentation, engineering"
-		/>
-		<!--Author-->
-		<meta name="author" content="Sherry Bath" />
-		<!--Viewport Dimensions-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!--Bootstrap Link-->
-		<link
-			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-		/>
-		<!-- Google Fonts Link -->
-		<link
-			href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;500;600;700&display=swap"
-			rel="stylesheet"
-		/>
-		<!--CSS Link-->
-		<link rel="stylesheet" href="style.css" />
-	</head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>API Docs</title>
+        <link rel="shortcut icon" type="image/png" href="assets/portfolio.jpg" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+            integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;0,900;1,700;1,800;1,900&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="css/animate.css">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 	<body>
 		<div class="col-sm-3">
             <a href="https://sherrybath12.github.io/Hello-World/">
                 <img src="assets/home.jpg" class="img-responsive" width="50" height="50" alt="home"/>
             </a>
     </div>
-		<!--NAV HEADER-->
-		<div id="header"></div>
-		<!--BEGIN CONTAINER-1-->
-		<div class="container-1">
-			<div class="jumbotron">
-				<div class="container text-center">
-					<!--<img src="assets/name.jpg" width="50%" />-->
-					<h1 class="special">API Documentation</h1>
-					<p id="jumbotron">
+
+	<table align="center">
+        <tr>
+            <td>
+    			<h1 class="special" align="center">API Documentation</h1>
+					<p>
 						API documentation is an instruction manaul that explains how to use an API and its services. The documentation
 						should be in its simplest form, yet it shouldn't leave out any important details. There are numerous tools out 
 						there to make your journey of API documentation easier. The benefit of using tools is the collaborative features 
 						and standard templates these tools provide, rather than starting from scratch. 
 					</p>
+            </td>
+            </tr>
+            </table>
+</br>
+</br>
+</br>
+	<table style="background-color:whitesmoke">
+		<tr style="height:400px" style="width:1000px"> 
+			<td class="col-xs-12 col-md-6 txtctr img-mydata">
+				<div>
+					<ul class="ulMyData">
+						<li><h3>Rest API and Redoc</h3></li>&#8226;lorel ipsum</li>
+						<li class="bulletText">&#8226;lorel ipsum</li>
+					</ul>
 				</div>
-			</div>
-		</div>
-		<!--BEGIN CONTAINER-2-->
-		<div class="container-fluid bg-3">
-			<div class="row" align="center">
-				<div class="col-sm-3">
-					<p>
-						<a href="https://sherrybath12.github.io/Redoc-API-Documentation/">
-						<h2 class="special">Rest API and Redoc</h1>
-						</a>
-						<a href="https://sherrybath12.github.io/Redoc-API-Documentation/">
-							<img src="assets/redoc.jpg" class="img-responsive" width="1000" height="1000" alt="rest-api"/>
-						</a>
-					</p>
-				</div>
-				<div class="col-sm-3">
-					<p>
-						<a href="https://sherrybath12.github.io/API-Swagger/">
-						<h2 class="special">SwaggerUI Open API</h1>
-						</a>
-						<a href="https://sherrybath12.github.io/API-Swagger/">
-							<img src="assets/swagger.jpg" class="img-responsive" width="1000" height="1000" alt="swagger"/>
-						</a>
-					</p>
-				</div>
-				<div class="col-sm-3">
-				<p>
-					<a href="https://sherrybath12.github.io/API-Markdown/">
-					<h2 class="special">API Docs with Markdown</h1>
+			</td>
+			<td width="10%"></td>
+			<td>
+				<div class="col-xs-12 col-md-6 txtctr img-mydata">
+					<a class="nav-link" href="https://sherrybath12.github.io/Redoc-API-Documentation/">
+					<img src="assets/pat.jpg" width="500" height="300" class="img" />
 					</a>
-					<a href="https://sherrybath12.github.io/API-Markdown/">
-						<img src="assets/marks.jpg" class="img-responsive" width="1000" height="1000" alt="markdown"/>
-					</a>
-				</p>
 				</div>
-			</div>
-		</div>
-	</div>
+			</td>
+	</tr>
+	 </table>
+	 <table style="background-color:white">
+		<tr style="height:400px"> 
+			<td width="10%"></td>
+			<td>
+				<div class="col-xs-12 col-md-6 txtctr img-mydata">
+					<a class="nav-link" href="https://sherrybath12.github.io/API-Markdown/">>
+					<img src="assets/marks.jpg" width="500" height="300" class="img" />
+					</a>
+				</div>
+			</td>
+			<td width="10%"></td>
+			<td class="col-xs-12 col-md-6 txtctr img-mydata">
+				<div>
+					<ul class="ulMyData">
+						<li><h3>API Documentation with Markdown</h3></li>
+						<li class="bulletText">&#8226;lorel ipsum</li>
+						<li class="bulletText">&#8226;lorel ipsum</li>
+					</ul>
+				</div>  
+			</td>
+	</tr>
+	 </table>
+	 <table style="background-color:whitesmoke" >
+		<tr style="height:400px"> 
+			<td class="col-xs-12 col-md-6 txtctr img-mydata">
+				<div>
+					<ul class="ulMyData">
+						<li><h3>Swagger & OpenAPI</h3></li>
+						<li class="bulletText">&#8226;lorel ipsum</li>
+						<li class="bulletText">&#8226;lorel ipsum</li>
+					</ul>
+				</div>
+			</td>
+			<td width="10%"></td>
+			<td>
+				<div class="col-xs-12 col-md-6 txtctr img-mydata">
+					<a class="nav-link" href="https://sherrybath12.github.io/API-Swagger/">
+					<img src="assets/swagger.jpg" width="500" height="300" class="img" />
+					</a>
+				</div>
+			</td>
+	</tr>
+	 </table> 
 	</body>
 </html>
