update api docs

--- a/apidocs.html
+++ b/apidocs.html
@@ -40,8 +40,8 @@
 </br>
 </br>
 </br>
-	<table style="background-color:whitesmoke">
-		<tr style="height:400px" style="width:1000px"> 
+	<table style="background-color:whitesmoke" align="center">
+		<tr style="height:400px"> 
 			<td class="col-xs-12 col-md-6 txtctr img-mydata">
 				<div>
 					<ul class="ulMyData">
@@ -54,13 +54,13 @@
 			<td>
 				<div class="col-xs-12 col-md-6 txtctr img-mydata">
 					<a class="nav-link" href="https://sherrybath12.github.io/Redoc-API-Documentation/">
-					<img src="assets/pat.jpg" width="500" height="300" class="img" />
+					<img src="assets/redoc.jpg" width="500" height="300" class="img" />
 					</a>
 				</div>
 			</td>
 	</tr>
 	 </table>
-	 <table style="background-color:white">
+	 <table style="background-color:white" align="center">
 		<tr style="height:400px"> 
 			<td width="10%"></td>
 			<td>
@@ -82,7 +82,7 @@
 			</td>
 	</tr>
 	 </table>
-	 <table style="background-color:whitesmoke" >
+	 <table style="background-color:whitesmoke" align="center">
 		<tr style="height:400px"> 
 			<td class="col-xs-12 col-md-6 txtctr img-mydata">
 				<div>
