--- a/tech.html
+++ b/tech.html
@@ -60,8 +60,8 @@
         <td width="10%"></td>
         <td>
             <div class="col-xs-12 col-md-6 txtctr img-mydata">
-                <a class="nav-link" href="samples/JMeter.pdf">
-                <img src="assets/perf.jpg" width="500" height="300" class="img" />
+                <a class="nav-link" href="https://sherrybath12.github.io/cypress/">
+                <img src="assets/automation.jpg" width="500" height="300" class="img" />
                 </a>
             </div>
         </td>
@@ -69,10 +69,10 @@
         <td class="col-xs-12 col-md-6 txtctr img-mydata">
             <div>
                 <ul class="ulMyData">
-                    <li><h3>JMeter Installation and Setup Guide</h3></li>
-                    <li class="bulletText">&#8226;This is a developer facing installation and setup guide for a performance testing tool called JMeter.</li>
-                    <li class="bulletText">&#8226;I was able to do dry runs, capture necessary screenshots and sample code aiding in quick install and setup of the tool.</li>
-                    <li class="bulletText">&#8226; It can be used for both API and UI performance tests along with a detailed result analysis dashboard.
+                    <li><h3>Cypress Installation and Setup Guide</h3></li>
+                    <li class="bulletText">&#8226;This is a developer facing installation and setup guide for an automation framework tool called Cypress.</li>
+                    <li class="bulletText">&#8226;It contains detailed steps for installation and setup of the tool using Node and has working samples for API and UI tests.</li>
+                    <li class="bulletText">&#8226;The screenshots and code snippets aid in better understanding of the document.
                 </ul>
             </div>  
         </td>
@@ -99,7 +99,30 @@
             </div>
         </td>
 </tr>
- </table> 
+ </table>
+ <table style="background-color:white">
+    <tr style="height:400px"> 
+        <td width="10%"></td>
+        <td>
+            <div class="col-xs-12 col-md-6 txtctr img-mydata">
+                <a class="nav-link" href="samples/JMeter.pdf">
+                <img src="assets/perf.jpg" width="500" height="300" class="img" />
+                </a>
+            </div>
+        </td>
+        <td width="10%"></td>
+        <td class="col-xs-12 col-md-6 txtctr img-mydata">
+            <div>
+                <ul class="ulMyData">
+                    <li><h3>JMeter Installation and Setup Guide</h3></li>
+                    <li class="bulletText">&#8226;This is a developer facing installation and setup guide for a performance testing tool called JMeter.</li>
+                    <li class="bulletText">&#8226;I was able to do dry runs, capture necessary screenshots and sample code aiding in quick install and setup of the tool.</li>
+                    <li class="bulletText">&#8226; It can be used for both API and UI performance tests along with a detailed result analysis dashboard.
+                </ul>
+            </div>  
+        </td>
+</tr>
+ </table>
  <!--
  <table style="background-color:white">
     <tr style="height:400px"> 
