--- a/index.html
+++ b/index.html
@@ -74,15 +74,17 @@
             <div class="row">
 
                 <div class="col-lg-5 text-banner">
-                    <h1 class="text-light banner-title  wow slideInLeft" data-wow-delay="1s">Portfolio</h1>
-                    <p class="text-light banner-subtitle my-5 ">Technical writers are enablers of information.
-                    </p>
+                    <h1 class="text-light banner-title  wow slideInLeft" data-wow-delay="0.5s">Portfolio</h1>
+                    <p class="text-light banner-subtitle my-5">Information Enabler, Thought Leadership                     
+                    & Technology Enthusiast</p>
+                  <!--  <p class="text-light banner-subtitle my-5 ">Thought Leadership</p>
+                    <p class="text-light banner-subtitle my-5 ">Technology Enthusiast</p>-->
                    <!-- <a href="" class="shadow banner-btn">Read More</a>-->
 
                 </div>
                 <div class="col-lg-2"></div>
                 <div class="col-lg-5">
-                    <img src="img/1.jpg" class="rounded img-banner  wow slideInRight" data-wow-delay="0.5s" alt="" width="600" height="400">
+                    <img src="img/1.jpg" class="rounded img-banner  wow slideInRight" data-wow-delay="0.5s" alt="" width="400" height="300">
                 </div>
 
             </div>
