--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="tech.html">Technical Writing Samples</a>
                             </li>
-                            <li class="nav-item">
+                         <!--   <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
-                            </li>
+                            </li>-->
 
 
                         </ul>
