--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                 <div class="col-lg-5 text-banner">
                     <h1 class="text-light banner-title  wow slideInLeft" data-wow-delay="0.5s">Portfolio</h1>
-                    <p class="text-light banner-subtitle my-5">Information Enabler, Thought Leadership                     
+                    <p class="text-light banner-subtitle my-5">Information Enabler, Thought Leader                     
                     & Technology Enthusiast</p>
                   <!--  <p class="text-light banner-subtitle my-5 ">Thought Leadership</p>
                     <p class="text-light banner-subtitle my-5 ">Technology Enthusiast</p>-->
