added api doc text

--- a/apidocs.html
+++ b/apidocs.html
@@ -27,13 +27,18 @@
 	<table align="center">
         <tr>
             <td>
-    			<h1 class="special" align="center">API Documentation</h1>
-					<p>
+    			<h1 class="special" align="center" h3 style="color: chocolate;">API Documentation</h1>
+				</br>
+					<table align="center" width="80%">
+						<tr>
+							<td>
 						API documentation is an instruction manaul that explains how to use an API and its services. The documentation
 						should be in its simplest form, yet it shouldn't leave out any important details. There are numerous tools out 
 						there to make your journey of API documentation easier. The benefit of using tools is the collaborative features 
 						and standard templates these tools provide, rather than starting from scratch. 
-					</p>
+					</td>
+					</tr>
+					</table>
             </td>
             </tr>
             </table>
@@ -41,63 +46,66 @@
 </br>
 </br>
 	<table style="background-color:whitesmoke" align="center">
-		<tr style="height:400px"> 
+		<tr style="height:300px"> 
 			<td class="col-xs-12 col-md-6 txtctr img-mydata">
 				<div>
 					<ul class="ulMyData">
-						<li><h3>Rest API and Redoc</h3></li>&#8226;lorel ipsum</li>
-						<li class="bulletText">&#8226;lorel ipsum</li>
+						<li><h3 style="color: chocolate;">Rest API and Redoc</h3>
+						</br>
+						</li>&#8226;Redoc is an open-source library or tool used to generate API documentation based on the OpenAPI specification.</li>
+						<li class="bulletText">&#8226;This specification can be written in YAML or JSON and this will represent the structure of your API.</li>
 					</ul>
 				</div>
 			</td>
-			<td width="10%"></td>
+			<td width="15%"></td>
 			<td>
 				<div class="col-xs-12 col-md-6 txtctr img-mydata">
 					<a class="nav-link" href="https://sherrybath12.github.io/Redoc-API-Documentation/">
-					<img src="assets/redoc.jpg" width="500" height="300" class="img" />
+					<img src="assets/redoc.jpg" width="380" height="220" class="img" />
 					</a>
 				</div>
 			</td>
 	</tr>
 	 </table>
 	 <table style="background-color:white" align="center">
-		<tr style="height:400px"> 
-			<td width="10%"></td>
+		<tr style="height:350px"> 
+			<td width="15%"></td>
 			<td>
 				<div class="col-xs-12 col-md-6 txtctr img-mydata">
 					<a class="nav-link" href="https://sherrybath12.github.io/API-Markdown/">>
-					<img src="assets/marks.jpg" width="500" height="300" class="img" />
+					<img src="assets/marks.jpg" width="400" height="250" class="img" />
 					</a>
 				</div>
 			</td>
-			<td width="10%"></td>
+			<td width="15%"></td>
 			<td class="col-xs-12 col-md-6 txtctr img-mydata">
 				<div>
 					<ul class="ulMyData">
-						<li><h3>API Documentation with Markdown</h3></li>
-						<li class="bulletText">&#8226;lorel ipsum</li>
-						<li class="bulletText">&#8226;lorel ipsum</li>
+						<li><h3 style="color: chocolate;">API Documentation with Markdown</h3></li>
+						</br>
+						<li class="bulletText">&#8226;The Markdown Guide API provides a subset of documentation from the Markdown Guide in JSON format.</li>
 					</ul>
 				</div>  
 			</td>
 	</tr>
 	 </table>
 	 <table style="background-color:whitesmoke" align="center">
-		<tr style="height:400px"> 
+		<tr style="height:300px"> 
 			<td class="col-xs-12 col-md-6 txtctr img-mydata">
 				<div>
 					<ul class="ulMyData">
-						<li><h3>Swagger & OpenAPI</h3></li>
-						<li class="bulletText">&#8226;lorel ipsum</li>
-						<li class="bulletText">&#8226;lorel ipsum</li>
+						<li><h3 style="color: chocolate;">Swagger & OpenAPI</h3></li>
+						</br>
+						<li class="bulletText">&#8226;Swagger and OpenAPI specification lets us design and develop REST APIs in an effortless and seamless manner.</li>
+						<li class="bulletText">&#8226;These specifications allow describing the structure of an entire REST API so that machines can read and mock them.</li>
 					</ul>
 				</div>
 			</td>
-			<td width="10%"></td>
+			<td width="15%"></td>
 			<td>
 				<div class="col-xs-12 col-md-6 txtctr img-mydata">
 					<a class="nav-link" href="https://sherrybath12.github.io/API-Swagger/">
-					<img src="assets/swagger.jpg" width="500" height="300" class="img" />
+					<img src="assets/swagger.jpg" width="380" height="220" class="img" />
 					</a>
 				</div>
 			</td>
