updates to API docs

--- a/apidocs.html
+++ b/apidocs.html
@@ -54,6 +54,7 @@
 						</br>
 						</li>&#8226;Redoc is an open-source library or tool used to generate API documentation based on the OpenAPI specification.</li>
 						<li class="bulletText">&#8226;This specification can be written in YAML or JSON and this will represent the structure of your API.</li>
+						<li class="bulletText">&#8226;For this project, I used public API's for a real estate insurance company, converted them into Open API spec, followed by leveraging redoc.
 					</ul>
 				</div>
 			</td>
@@ -84,6 +85,7 @@
 						<li><h3 style="color: chocolate;">API Documentation with Markdown</h3></li>
 						</br>
 						<li class="bulletText">&#8226;The Markdown Guide API provides a subset of documentation from the Markdown Guide in JSON format.</li>
+						<li class="bulletText">&#8226;For this project, I have used API's from healthcare space involving a member being able to shop for medical services. </li>
 					</ul>
 				</div>  
 			</td>
@@ -98,6 +100,7 @@
 						</br>
 						<li class="bulletText">&#8226;Swagger and OpenAPI specification lets us design and develop REST APIs in an effortless and seamless manner.</li>
 						<li class="bulletText">&#8226;These specifications allow describing the structure of an entire REST API so that machines can read and mock them.</li>
+						<li class="bulletText">&#8226;For this project, I used public API's from NASA, converted them to Open API spec and used Swagger for documentation.</li>
 					</ul>
 				</div>
 			</td>
