--- a/reports.html
+++ b/reports.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Portfolio</title>
+        <title>Reports</title>
         <link rel="shortcut icon" type="image/png" href="assets/portfolio.jpg" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
             integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
@@ -27,7 +27,7 @@
     <table align="center">
         <tr>
             <td>
-                <h1 style="color: royalblue">Technical Writing Samples</h1>
+                <h1 style="color: royalblue">Reporting and UX tools</h1>
             </td>
             </tr>
             </table>
@@ -39,18 +39,15 @@
         <td class="col-xs-12 col-md-6 txtctr img-mydata">
             <div>
                 <ul class="ulMyData">
-                    <li><h3 style="color: chocolate">Orders Technical Implementation Guide</h3></li>
+                    <li><h3 style="color: chocolate">Figma tool for Skin Design</h3></li>
                     </br>
-                    <li class="bulletText">&#8226;This is a comprehensive customer facing technical implementation guide made at McKesson with detailed information on how to integrate with the Connected Orders solution.</li>
-                    <li class="bulletText">&#8226;The document is complemented with architecture illustrations, canonical data formats and sample HL7 transactions.</li>
                 </ul>
             </div>
         </td>
         <td width="10%"></td>
         <td>
             <div class="col-xs-12 col-md-6 txtctr img-mydata">
-                <a class="nav-link" href="samples/Orders Guide.pdf">
-                <img src="assets/orders.jpg" width="500" height="300" class="img" />
+                <img src="assets/figma.jpg" width="900" height="500" class="img" />
                 </a>
             </div>
         </td>
@@ -62,7 +59,7 @@
         <td>
             <div class="col-xs-12 col-md-6 txtctr img-mydata">
                 <a class="nav-link" href="https://sherrybath12.github.io/cypress/">
-                <img src="assets/automation.jpg" width="500" height="300" class="img" />
+                <img src="assets/reports.jpg" width="1000" height="600" class="img" />
                 </a>
             </div>
         </td>
@@ -70,26 +67,21 @@
         <td class="col-xs-12 col-md-6 txtctr img-mydata">
             <div>
                 <ul class="ulMyData">
-                    <li><h3 style="color: chocolate">Cypress Installation and Setup Guide</h3></li>
+                    <li><h3 style="color: chocolate">Reports using Tableau</h3></li>
                     </br>
-                    <li class="bulletText">&#8226;This is a developer facing installation and setup guide for an automation framework tool called Cypress.</li>
-                    <li class="bulletText">&#8226;It contains detailed steps for installation and setup of the tool using Node and has working samples for API and UI tests.</li>
-                    <li class="bulletText">&#8226;The screenshots and code snippets aid in better understanding of the document.
                 </ul>
             </div>  
         </td>
 </tr>
  </table>
+ <!--
  <table style="background-color:whitesmoke" >
     <tr style="height:400px"> 
         <td class="col-xs-12 col-md-6 txtctr img-mydata">
             <div>
                 <ul class="ulMyData">
-                    <li><h3 style="color: chocolate">Failure Recovery in a Distributed System</h3></li>
+                    <li><h3 style="color: chocolate">CloudWatch Reports</h3></li>
                     </br>
-                    <li class="bulletText">&#8226;This document is a US patent for a project where I was an active participant in during the system analysis/testing/ tech writing.</li>
-                    <li class="bulletText">&#8226;It follows patent document style with figures and detailed description.</li>
-                    <li class="bulletText">&#8226;The complete document can be searched on the public patent <a href="https://ppubs.uspto.gov/pubwebapp/static/pages/ppubsbasic.html">site</a> with number patent 10360095 can be viewed at <a href = "https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/10360095">here</a></li>
                 </ul>
             </div>
         </td>
@@ -141,12 +133,12 @@
         <td width="10%"></td>
         <td>
             <div class="col-xs-12 col-md-6 txtctr img-mydata">
-                <a class="nav-link" href="reports.html">
-                <img src="assets/report.jpg" width="500" height="300" class="img" />
+                <a class="nav-link" href="samples/Patent.pdf">
+                <img src="assets/report.png" width="500" height="300" class="img" />
                 </a>
             </div>
         </td>
 </tr>
- </table>
+ </table>-->
 </body> 
 </html>
