--- a/tech.html
+++ b/tech.html
@@ -108,7 +108,7 @@
         <td width="10%"></td>
         <td>
             <div class="col-xs-12 col-md-6 txtctr img-mydata">
-                <a class="nav-link" href="samples/JMeter.pdf">
+                <a class="nav-link" href="https://sherrybath12.github.io/jmeter/">
                 <img src="assets/perf.jpg" width="500" height="300" class="img" />
                 </a>
             </div>
