--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
 
-<body>
+<body style="background: url(img/bannerbottom.jpg);">
     <!-- START NAVBAR -->
-    <div class="mynavbar navbar fixed-top">
+    <div class="mynavbar navbar fixed-top" style="background: url(img/bannerbottom.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-lg-2"></div>
                 <div class="col-lg-5">
-                    <img src="img/1.jpg" class="rounded img-banner  wow slideInRight" data-wow-delay="0.5s" alt="" width="400" height="300">
+                    <img src="img/4.jpg" class="rounded img-banner  wow slideInRight" data-wow-delay="0.5s" alt="" width="400" height="300">
                 </div>
 
             </div>
