--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="https://sherrybath12.github.io/Introduction/">About</a>
+                                <a class="nav-link" href="https://sherrybath12.github.io/Introduction/" style="color: white">About</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="apidocs.html">API Documentation</a>
+                                <a class="nav-link" href="apidocs.html" style="color: white">API Documentation</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="tech.html">Technical Writing Samples</a>
+                                <a class="nav-link" href="tech.html" style="color: white">Technical Writing Samples</a>
                             </li>
                          <!--   <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
