--- a/tech.html
+++ b/tech.html
@@ -20,7 +20,7 @@
     </head>
 <body>
     <div class="col-sm-3">
-            <a href="https://sherrybath12.github.io/Hello-World/">
+            <a href="https://sherrybath12.github.io/portfolio/">
                 <img src="assets/home.jpg" class="img-responsive" width="50" height="50" alt="home"/>
             </a>
     </div>
